--- a/index.html
+++ b/index.html
@@ -357,20 +357,20 @@
 
          <div class="footer__group">
             <div class="footer__social">
-               <a href="https://www.facebook.com/arunkumar.arunak.56" target="_blank" class="footer__social-link">
+               <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
                   <i class="ri-facebook-line"></i>
                </a>
 
-               <a href="https://www.instagram.com/_arunprinz/" target="_blank" class="footer__social-link">
+               <a href="https://www.instagram.com/instagram/" target="_blank" class="footer__social-link">
                   <i class="ri-instagram-line"></i>
                </a>
 
-               <a href="https://x.com/arunprinzak" target="_blank" class="footer__social-link">
-                  <i class="ri-twitter-line"></i>
+               <a href="https://github.com/arunkumarv06" target="_blank" class="footer__social-link">
+                  <i class="ri-github-fill"></i>
                </a>
 
-               <a href="https://web.telegram.org/k/#1275750218" target="_blank" class="footer__social-link">
-                  <i class="ri-telegram-line"></i>
+               <a href="https://www.linkedin.com/in/arunkumar-vadivel06/" target="_blank" class="footer__social-link">
+                  <i class="ri-linkedin-box-fill"></i>
                </a>
             </div>
 
